# CS133swissknife

./: CMakeLists.txt  Doxyfile  README.md  swissknife_config.h.in
trunk/: CMakeLists.txt
trunk/include/swissknife/lut/: sqrt_calc.hpp
trunk/include/swissknife/profiling/: lap_timer.hpp
trunk/include/swissknife/tools/: base_logger.hpp  console_logger.hpp  file_logger.hpp
trunk/src/: CMakeLists.txt
trunk/src/lut/: sqrt_calc.cpp
trunk/src/profiling/: lap_timer.cpp
trunk/src/tools/: base_logger.cpp  console_logger.cpp  file_logger.cpp
trunk/test/: CMakeLists.txt  test_gdb.cpp  test_hammingDistance1.cpp  test_hammingDistance2.cpp  test_lap_timer.cpp  test_logger.cpp  test_valgrind.cpp
